crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__transition__transition_nested_static_native_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/transition.rs
expression: native
---
import { createComponent as _createComponent, child as _child, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, VaporTransition as _VaporTransition, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><span> </span></div>")

export function render(_ctx) {
  const n2 = _createComponent(_VaporTransition, { css: () => (false) }, {
    "default": () => {
      const n0 = t0()
      const n1 = _child(n0)
      const x1 = _txt(n1)
      _renderEffect(() => _setText(x1, _toDisplayString(_ctx.label)))
      return n0
    }
  }, true)
  return n2
}
