crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__transition__transition_nested_static_native_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/transition.rs
expression: native_segments
---
[
    "1:23 \"div><spa\" -> \"div><spa\"",
    "1:28 \"span> </\" -> \"span>{{ \"",
    "3:0 \"export f\" -> \"<Transit\"",
    "9:56 \"_ctx.lab\" -> \"label }}\" [label]",
]
